--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,8 @@ html,body{
     height: calc(100% - 6.25rem);
     padding: 1.2rem;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
     gap: .6rem;
 }
