--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@ html,body{
     
 }
 
-@media only screen and (max-width : 760px) {
+@media only screen and (max-width : 860px) {
     .elem{
     
         display: flex;
@@ -127,11 +127,12 @@ html,body{
     }
 
     #panel{
-    width: 97%;
+    width: 100%;
     height: 85%;
     overflow: hidden;
     border-radius: 10px;
-    background-color: aliceblue;
+    /*background-color: aliceblue;*/
+    background-color:red;
     box-shadow: 15px 15px  8px rgba(20, 20, 104, 0.79);
     }
     
